--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@fortawesome/vue-fontawesome": "^2.0.2",
         "axios": "^0.21.1",
         "js-cookie": "^2.2.1",
+        "startbootstrap-sb-admin-2": "^4.1.3",
         "sweetalert2": "^10.16.6",
         "vform": "^1.0.1",
         "vue": "^2.6.12",
