--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
         "@fortawesome/vue-fontawesome": "^2.0.2",
         "axios": "^0.21.1",
+        "html2canvas": "*",
         "js-cookie": "^2.2.1",
         "startbootstrap-sb-admin-2": "^4.1.3",
         "sweetalert2": "^10.16.6",
@@ -37,6 +38,7 @@
         "vue-meta": "^2.4.0",
         "vue-router": "^3.5.1",
         "vuex": "^3.6.2",
-        "vuex-router-sync": "^5.0.0"
+        "vuex-router-sync": "^5.0.0",
+        "xlsx": "^0.16.9"
     }
 }
