--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "axios": "^0.21.1",
         "html2canvas": "*",
         "js-cookie": "^2.2.1",
+        "print-js": "^1.6.0",
         "startbootstrap-sb-admin-2": "^4.1.3",
         "sweetalert2": "^10.16.6",
         "vform": "^1.0.1",
