--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "2.4",
+        "santigarcor/laratrust": "^6.3",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
