--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "vue": "^2.6.12",
         "vue-i18n": "^8.24.3",
         "vue-meta": "^2.4.0",
+        "vue-multiselect": "^2.1.6",
         "vue-router": "^3.5.1",
         "vuex": "^3.6.2",
         "vuex-router-sync": "^5.0.0",
