--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "2.4",
         "pusher/pusher-php-server": "~3.0",
         "santigarcor/laratrust": "^6.3",
+        "spatie/laravel-backup": "^6.16",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
