--- a/package.json
+++ b/package.json
@@ -30,17 +30,22 @@
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
         "@fortawesome/vue-fontawesome": "^2.0.2",
         "axios": "^0.21.1",
-        "html2canvas": "*",
+        "html2canvas": "^1.3.2",
         "js-cookie": "^2.2.1",
+        "jspdf": "^2.3.1",
+        "jspdf-yworks": "^2.1.1",
         "print-js": "^1.6.0",
         "startbootstrap-sb-admin-2": "^4.1.3",
+        "svg2pdf.js": "^2.1.0",
         "sweetalert2": "^10.16.6",
+        "v-money": "^0.8.1",
         "vform": "^1.0.1",
         "vue": "^2.6.12",
         "vue-i18n": "^8.24.3",
         "vue-meta": "^2.4.0",
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.5.1",
+        "vue-the-mask": "^0.11.1",
         "vuex": "^3.6.2",
         "vuex-router-sync": "^5.0.0",
         "xlsx": "^0.16.9"
